--- a/style.css
+++ b/style.css
@@ -7,4 +7,7 @@
     text-align: center;
     text-transform: capitalize;
     color: #000;
+    font-style: italic;
+    font-size: 18px;
+    font-weight: bold;
 }
