--- a/style.css
+++ b/style.css
@@ -17,3 +17,12 @@ nav {
     height: 50px;
     margin-top: 30px;
 }
+
+.navbar .navbar-nav {
+    display: inline-block;
+    float: none;
+}
+
+.navbar .navbar-collapse {
+    text-align: center;
+}
