--- a/style.css
+++ b/style.css
@@ -11,13 +11,19 @@
     font-size: 18px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    position: absolute;
-    width: 100%;
-    left: 0;
-    margin:0 auto;
 }
 
 nav {
     height: 50px;
-    margin-top: 30px;
+    margin-top: 10px;
+}
+
+
+#slogan {
+    margin-top: 10px;
+    width: 100%;
+    font-weight: bold;
+    text-align: center;
+    color: #000;
+    font-size: x-large;
 }
