--- a/style.css
+++ b/style.css
@@ -1,15 +1,11 @@
+
 body {
    background-color:#bccb78;
 }
 
-.nav-link {
+.navbar-light .navbar-nav .nav-link {
     padding: 0px 10px 0px 10px;
-    display: block;
-    float: left;
     border-right: 1px solid #000;
-    text-decoration: none;
-    text-align: center;
-    text-transform: capitalize;
     color: #000;
     font-style: italic;
     font-size: 18px;
@@ -18,10 +14,11 @@ body {
 }
 
 nav {
-    height: 50px;
-    margin-top: 10px;
+    height: 60px;
     background-color: #5fa626;
+
 }
+
 
 #navbarNavAltMarkup {
   background-color: #5fa626;
@@ -30,6 +27,7 @@ nav {
 
 #slogan {
     margin-top: 10px;
+    margin-bottom: 10px;
     width: 100%;
     font-weight: bold;
     text-align: center;
@@ -37,16 +35,46 @@ nav {
     font-size: x-large;
 }
 
+#featured {
+  color: #13819A;
+}
+
+.featured {
+  padding-bottom: 50px;
+}
+
+.carousel {
+  padding-bottom: 50px;
+}
+
+.carousel-item  {
+  height: 267px;
+}
+
 .logo {
 
+margin-left: 70px;
 margin-top:35px;
 padding-right:50px;
 
 }
 
+.img-thumbnail {
+  padding: 1px;
+  width:752px;
+  height:189px;
+}
 
-.row {
+.container {
+  padding: 30px;
+}
 
-  background-color: white;
-
+.footer {
+margin: 0;
+padding: 20px 0px 0px 0px;
+text-align: center;
+line-height: normal;
+text-transform: uppercase;
+font-size: 10px;
+color: #9B5B01;
 }
